Finished CSS, page population

--- a/inventory.html
+++ b/inventory.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adventure With Me</title>
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/normalize.css">
 </head>
 <body>
     <header>
@@ -15,28 +17,9 @@
     </header>
     <main>
         <section class="items">
-            <div class="item-box">
-                <h2>Item Name</h2>
-                <h4>Description:</h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi labore reiciendis cupiditate rerum aut quasi recusandae distinctio, culpa dicta quia?</p>
-                <button class="big-button">Use</button>
-                <button class="small-button">Discard</button>
-            </div>
-            <div class="item-box">
-                <h2>Item Name</h2>
-                <h4>Description:</h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi labore reiciendis cupiditate rerum aut quasi recusandae distinctio, culpa dicta quia?</p>
-                <button class="big-button">Use</button>
-                <button class="small-button">Discard</button>
-            </div>
-            <div class="item-box">
-                <h2>Item Name</h2>
-                <h4>Description:</h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi labore reiciendis cupiditate rerum aut quasi recusandae distinctio, culpa dicta quia?</p>
-                <button class="big-button">Use</button>
-                <button class="small-button">Discard</button>
-            </div>
+            
         </section>
     </main>
+    <script src="scripts/main.js" type="module"></script>
 </body>
 </html>
