--- a/store.html
+++ b/store.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adventure With Me</title>
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/normalize.css">
 </head>
 <body>
     <header>
@@ -14,30 +16,11 @@
         </nav>
     </header>
     <main>
+        <a href="item_creation.html"><button class="creator-button">Create New Item</button></a>
         <section class="items">
-            <a href="item_creation.html" class="creator-button"><button class="creator-button">Create New Item</button></a>
-            <div class="item-box">
-                <h2>Item Name</h2>
-                <h4>Description:</h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi labore reiciendis cupiditate rerum aut quasi recusandae distinctio, culpa dicta quia?</p>
-                <button class="big-button">Purchase</button>
-                <button class="small-button">Delete</button>
-            </div>
-            <div class="item-box">
-                <h2>Item Name</h2>
-                <h4>Description:</h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi labore reiciendis cupiditate rerum aut quasi recusandae distinctio, culpa dicta quia?</p>
-                <button class="big-button">Purchase</button>
-                <button class="small-button">Delete</button>
-            </div>
-            <div class="item-box">
-                <h2>Item Name</h2>
-                <h4>Description:</h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi labore reiciendis cupiditate rerum aut quasi recusandae distinctio, culpa dicta quia?</p>
-                <button class="big-button">Purchase</button>
-                <button class="small-button">Delete</button>
-            </div>
+            
         </section>
     </main>
+    <script src="scripts/main.js" type="module"></script>
 </body>
 </html>
