--- a/quest_creation.html
+++ b/quest_creation.html
@@ -25,7 +25,8 @@
             </fieldset>
             <fieldset class="rewards">
                 <label>Rewards:</label>
-                <label>EXP: <input type="text" name="exp" class="small-box" id="exp" required></label>
+                <label>EXP: <input type="number" name="exp" class="small-box" id="exp" required></label>
+                <label>Dollars: <input type="number" name="dollars" class="small-box" id="dollars" required></label>
                 <label>Stats:</label>
                 <label>+1 Health<input type="checkbox" name="health" id="health" ></label>
                 <label>+1 Strength<input type="checkbox" name="strength" id="strength" ></label>
@@ -33,8 +34,8 @@
                 <label>+1 Stamina<input type="checkbox" name="stamina" id="stamina" ></label>
                 <label>+1 Magic<input type="checkbox" name="magic" id="magic" ></label>
             </fieldset>
-            <button class="big-button" id="createQuest">Create</button>
-            <button class="small-button">Start Over</button>
+            <input type="submit" value="Create Quest" class="big-button">
+            <input type="reset" value="Start Over" class="small-button">
         </form>
     </main>
     <script src="scripts/QuestCreator.mjs" type="module"></script>
