--- a/inventory.html
+++ b/inventory.html
@@ -16,7 +16,7 @@
         </nav>
     </header>
     <main>
-        <section class="items">
+        <section class="items" id="inventory-items">
             
         </section>
     </main>
