--- a/store.html
+++ b/store.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <a href="item_creation.html"><button class="creator-button">Create New Item</button></a>
-        <section class="items">
+        <section class="items" id="store-items">
             
         </section>
     </main>
